2011-07-12  Sylvain Bougerel  <sylvain.bougerel.devel@gmail.com>

        * src/bits/spatial_range.hpp (spatial): fix compilation issues detected
        with g++4.5, that went through with MSVC9.0.

        * doc/Doxygen added new documentation variables and documentation
        aliases to generate concepts lists.

        * src/bits/spatial_range.hpp design of overlap and enclose bounds
        finalized. Also added new explanation for RangePredicated concept.

        * test/verify.cpp Added tests for the bounds factory and the bounds
        themselves. The last part must still be implemented.

        * src/bits/spatial_exception.hpp remapped conflicting names in
        exceptions and added new exceptions for overlap and enclose bounds.

2011-07-08  Sylvain Bougerel  <sylvain.bougerel.devel@gmail.com>

        * Overlap_bound is done. Need to redesign Range_iterators a little bit
        to accomodate the new iterface for the bounds.

2011-07-07  Sylvain Bougerel  <sylvain.bougerel.devel@gmail.com>

        * Started working on overlap and enclose iterator. It seems overlap are
        trickier to implement than I suspected.

        * Modified the compilation parameters to make it even more strict. No
        more shadowing of variables, and not more implicit converstion of
        types.

2011-06-16  Sylvain Bougerel  <sylvain.bougerel.devel@gmail.com>

        * src/bits/spatial_mapping.tpp fixed an issue with lower_bound and
        upper_bound functions. Wrong initialization of 'best' pointer. Somehow
        it has slipt uncaught until now.

2011-06-14  Sylvain Bougerel  <sylvain.bougerel.devel@gmail.com>

        * Added support for Microsoft Visual Studio 9.0. Generation of unit
        test file is working and fixed most compilation issues (some remain).

        * src/bits/spatial_details.hpp Removed unnecessary match function,
        acting as an alias for predicate.

2011-06-13  Sylvain Bougerel  <sylvain.bougerel.devel@gmail.com>
