@@ -1,4 +1,0 @@
-<hr class="footer"/><address class="footer"><small>
-Generated on $datetime for $projectname by&#160;<a href="http://www.doxygen.org/index.html"><img class="footer" src="$relpath$doxygen.png" alt="doxygen"/></a> $doxygenversion</small></address>
-</body>
-</html>
