@@ -1,21 +1,0 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/xhtml;charset=UTF-8"/>
-<title>$title</title>
-<link rel="shortcut icon" href="favicon.ico" />
-<link href="$relpath$tabs.css" rel="stylesheet" type="text/css"/>
-<link href="$relpath$search/search.css" rel="stylesheet" type="text/css"/>
-<script type="text/javascript" src="$relpath$search/search.js"></script>
-<link href="$relpath$doxygen.css" rel="stylesheet" type="text/css"/>
-</head>
-<body onload='searchBox.OnSelectItem(0);'>
-<div id="top"><!-- do not remove this div! -->
-<div id="titlearea">
- <div id="projectname">
-  <img alt="Logo" src="spatial_logo.png">
-  <span id="projectnumber">version: $projectnumber</span>
- </div>
- <div id="projectbrief"><i>Header-only Generic Multi-Dimensional Containers Library</i></div>
-</table>
-</div>
