@@ -1,5 +1,12 @@
 2011-07-12  Sylvain Bougerel  <sylvain.bougerel.devel@gmail.com>
 
+        * doc/Doxyfile Fixed some documentation issues over some LaTeX
+        formulas. Removed custom header and footer for HTML since generated doc
+        may fail between different versions of Doxygen introducing mismatch in
+        stylesheets. And added a LaTeX output to the documentation. All in all,
+        most changes are to make the documentation directory cleaner and more
+        standard with regard to the output generated by Doxygen.
+
         * src/bits/spatial_range.hpp (spatial): fix compilation issues detected
         with g++4.5, that went through with MSVC9.0.
 
